horizontal scrolling fix

--- a/frontend/src/styles/Layout.scss
+++ b/frontend/src/styles/Layout.scss
@@ -29,6 +29,6 @@
   padding: 50px;
   height: 100%;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
   box-sizing: border-box;
 }
